//使用proto3语法
syntax = "proto3";

import "causa/server_discover_causa.proto";
import "causa/schedule_causa.proto";
import "causa/common_causa.proto";
import "google/protobuf/empty.proto";
import "causa/register_causa.proto";

//生成多个java文件
//option java_multiple_files = true;
//把生成的文件放到哪个包下
option java_package = "org.kjob.remote.api";
//输出的类名
option java_outer_classname = "CausaGrpcClientGen";
//定义一个类
service ServerDiscover {

  rpc assertApp(AppName) returns(Response) {};

  rpc heartbeatCheck(HeartbeatCheck) returns(Response) {};

  rpc pingServer(Ping) returns(Response) {};

  rpc serverChange(ServerChangeReq) returns(Response){};

}

service Schedule {
  rpc reportWorkerHeartbeat(WorkerHeartbeat) returns(Response) {};
  rpc serverScheduleJob(ServerScheduleJobReq) returns(Response) {};
}

service RegisterToNameServer {
  rpc serverRegister(ServerRegisterReporter) returns(Response){};
  rpc workerSubscribe(WorkerSubscribeReq) returns(Response){};
}

